@@ -1,5 +1,6 @@
 cdebconf (0.120) UNRELEASED; urgency=low
 
+  [ Frans Pop ]
   * debian/rules: add -l option in the dh_shlibsdep call for the gtk udeb to
     ensure it gets a correct dependency on licairo-directfb2-udeb.
     This means we need an additional build dependency on libcairo-directfb2,
@@ -7,7 +8,10 @@ cdebconf (0.120) UNRELEASED; urgency=low
     was chosen for cairo itself and is probably more reliable than depending
     on RPATH in objdump (especially as lintian does not seem to like RPATHs).
 
- -- Frans Pop <fjp@debian.org>  Wed, 11 Jul 2007 19:31:18 +0200
+  [ Attilio Fiandrotti ]
+  * Removed workaround for #407035 because upstream fixed in gtk+ 2.10.x series.
+
+ -- Attilio Fiandrotti <attilio.fiandrotti@gmail.com>  Fri, 27 Jul 2007 15:19:25 +0200
 
 cdebconf (0.119) unstable; urgency=low
 
